--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -19,7 +19,7 @@
   </div>
 
     <div class = "form_collect">
-        <form action = "/add_items" method = "post" class = "form">
+        <form action = {{ url_for("create_new_task") }} method = "post" class = "form">
             <div class="form_item">
                 <label for="todo">Enter an item to complete: </label>
                 <input type = "text" name="todo" id="todo" required>
