--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -12,9 +12,19 @@
       <h2>Items</h2>
       <ul class="list-group mb-4">
         {% for item in items %}
-          <li>
-              {{ item.title }}
-            <a href="complete_items/{{ item.id }}">Completed</a>
+          <li class="list-group-item">
+          <div class="container">
+              <div class = "row">
+                  <div class="col-sm-9">
+                      {{ item.title }}
+                 </div>
+                  <div class = "col-sm-3">
+                      <a class ="btn btn-outline-success" href="complete_items/{{ item.id }}" role="button">
+              Completed
+              </a>
+                  </div>
+              </div>
+          </div>
           </li>
         {% endfor %}
       </ul>
@@ -22,13 +32,13 @@
   </div>
 
     <div class = "form_collect">
-        <form action = {{ url_for("create_new_task") }} method = "post" class = "form">
-            <div class="form_item">
+        <form action = {{ url_for("create_new_task") }} method="post">
+            <div class="form-group">
                 <label for="todo">Enter an item to complete: </label>
-                <input type = "text" name="todo" id="todo" required>
+                <input type = "text" name="todo" id="todo" class="form-control" placeholder="task" required>
             </div>
             <div class = "form_item">
-                <Button class="submit">Add</Button>
+                <Button type="submit" class="btn btn-primary btn-large">Add</Button>
             </div>
         </form>
     </div>
