Update styling changes

--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -9,8 +9,8 @@
 
   <div class="row">
     <div class="col-md-12">
-      <h2>Tasks</h2>
-      <h3>To be completed</h3>
+      <h2 class="mb-3" >Tasks</h2>
+      <h3 class="mb-3">To be completed</h3>
       <ul class="list-group mb-4">
         {% for item in items if item["status"] == "Not Started" %}
           <li class="list-group-item">
@@ -19,10 +19,12 @@
                   <div class="col-9">
                       {{ item.title }}
                  </div>
-                  <div class = "col-3">
-                      <a class ="btn btn-outline-success" href="complete_item/{{ item.id }}" role="button">
+                  <div class = "col-2">
+                      <a class ="btn btn-success" href="complete_item/{{ item.id }}" role="button">
               Completed
               </a>
+                  </div>
+                  <div class = "col-1">
                       <a class ="btn btn-danger" href="delete_item/{{ item.id }}" role="button">
               Delete
               </a>
@@ -31,7 +33,7 @@
           </div>
           </li>
         {% endfor %}
-      <h3>Completed</h3>
+      <h3 class="mb-3 mt-3">Completed</h3>
       <ul class="list-group mb-4">
           {% for item in items if item["status"] == "Completed" %}
               <li class="list-group-item">
