--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -12,12 +12,12 @@
       <h2 class="mb-3" >Tasks</h2>
       <h3 class="mb-3">To be completed</h3>
       <ul class="list-group mb-4">
-        {% for item in items if item["status"] == "Not Started" %}
+        {% for item in items if item["idList"] == "62cc1a1f3eac6c0953e9df48" %}
           <li class="list-group-item">
           <div class="container">
               <div class = "row">
                   <div class="col-9">
-                      {{ item.title }}
+                      {{ item.name }}
                  </div>
                   <div class = "col-2">
                       <a class ="btn btn-success" href="complete_item/{{ item.id }}" role="button">
@@ -33,14 +33,15 @@
           </div>
           </li>
         {% endfor %}
+      </ul>
       <h3 class="mb-3 mt-3">Completed</h3>
       <ul class="list-group mb-4">
-          {% for item in items if item["status"] == "Completed" %}
+          {% for item in items if item["idList"] == "62cc1a1f3eac6c0953e9df4a" %}
               <li class="list-group-item">
           <div class="container">
               <div class = "row">
                   <div class="col-11">
-                      {{ item.title }}
+                      {{ item.name }}
                  </div>
                   <div class = "col-1">
                       <a class ="btn btn-danger" href="delete_item/{{ item.id }}" role="button">
