--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -17,7 +17,7 @@
           <div class="container">
               <div class = "row">
                   <div class="col-9">
-                      {{ item.name }}
+                      <b>{{ item.name }}</b>: {{ item.description }}
                  </div>
                   <div class = "col-2">
                       <a class ="btn btn-success" href="complete_item/{{ item.id }}" role="button">
@@ -41,7 +41,7 @@
           <div class="container">
               <div class = "row">
                   <div class="col-11">
-                      {{ item.name }}
+                      <b>{{ item.name }}</b>: {{ item.description }}
                  </div>
                   <div class = "col-1">
                       <a class ="btn btn-danger" href="delete_item/{{ item.id }}" role="button">
@@ -57,10 +57,16 @@
   </div>
 
     <div class = "form_collect">
+        <h3 class="mb-3 mt-3">Create a new task</h3>
         <form action = {{ url_for("create_new_task") }} method="post">
             <div class="form-group">
-                <label for="todo">Enter an item to complete: </label>
-                <input type = "text" name="todo" id="todo" class="form-control" placeholder="task" required>
+                <label for="todo">Enter task name: </label>
+                <input type = "text" name="todo" id="todo" class="form-control" placeholder="Name" required>
+            </div>
+            <div class="form-group">
+                <label for="description">Enter task description: </label>
+                <input type = "text" name="description" id="description"
+                       class="form-control" placeholder="Description" required>
             </div>
             <div class = "form_item">
                 <Button type="submit" class="btn btn-primary btn-large">Add</Button>
