--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -12,7 +12,33 @@
       <h2 class="mb-3" >Tasks</h2>
       <h3 class="mb-3">To Do</h3>
       <ul class="list-group mb-4">
-        {% for item in view_model.items if item["idList"] == view_model.list_targets["To Do"] %}
+        {% for item in view_model.to_do_items %}
+          <li class="list-group-item">
+          <div class="container">
+              <div class = "row">
+                  <div class="col-9">
+                      <b>Title:</b> {{ item.name }} <br/>
+                      <b>Description</b> {{ item.description }} <br/>
+                      <b>Due date: </b> {{ item.due_date }}
+                 </div>
+                  <div class = "col-2">
+                      <a class ="btn btn-success" href="complete_item/{{ item.id }}" role="button">
+              Completed
+              </a>
+                  </div>
+                  <div class = "col-1">
+                      <a class ="btn btn-danger" href="delete_item/{{ item.id }}" role="button">
+              Delete
+              </a>
+                  </div>
+              </div>
+          </div>
+          </li>
+        {% endfor %}
+      </ul>
+    <h3 class="mb-3">Doing</h3>
+      <ul class="list-group mb-4">
+        {% for item in view_model.doing_items %}
           <li class="list-group-item">
           <div class="container">
               <div class = "row">
@@ -38,7 +64,7 @@
       </ul>
       <h3 class="mb-3 mt-3">Completed</h3>
       <ul class="list-group mb-4">
-          {% for item in view_model.items if item["idList"] == view_model.list_targets["Done"] %}
+          {% for item in view_model.done_items %}
               <li class="list-group-item">
           <div class="container">
               <div class = "row">
