--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -22,8 +22,8 @@
                       <b>Due date: </b> {{ item.due_date }}
                  </div>
                   <div class = "col-2">
-                      <a class ="btn btn-success" href="complete_item/{{ item.id }}" role="button">
-              Completed
+                      <a class ="btn btn-primary" href="doing_item/{{ item.id }}" role="button">
+              Doing
               </a>
                   </div>
                   <div class = "col-1">
@@ -42,11 +42,16 @@
           <li class="list-group-item">
           <div class="container">
               <div class = "row">
-                  <div class="col-9">
+                  <div class="col-7">
                       <b>Title:</b> {{ item.name }} <br/>
                       <b>Description</b> {{ item.description }} <br/>
                       <b>Due date: </b> {{ item.due_date }}
                  </div>
+                  <div class = "col-2">
+                      <a class ="btn btn-warning" href="to_do_item/{{ item.id }}" role="button">
+              To do
+              </a>
+                  </div>
                   <div class = "col-2">
                       <a class ="btn btn-success" href="complete_item/{{ item.id }}" role="button">
               Completed
@@ -74,8 +79,8 @@
                       <b>Due date: </b> {{ item.due_date }}
                  </div>
                   <div class = "col-2">
-                      <a class ="btn btn-outline-warning" href="uncomplete_item/{{ item.id }}" role="button">
-              To-do
+                      <a class ="btn btn-primary" href="doing_item/{{ item.id }}" role="button">
+              Doing
               </a>
                   </div>
                   <div class = "col-1">
