Change list styling

--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -16,10 +16,10 @@
           <li class="list-group-item">
           <div class="container">
               <div class = "row">
-                  <div class="col-9">
+                  <div class="col-9 overflow-auto">
                       <b>Title:</b> {{ item.name }} <br/>
-                      <b>Description</b> {{ item.description }} <br/>
-                      <b>Due date: </b> {{ item.due_date }}
+                      <b>Description:</b> {{ item.description }} <br/>
+                      <b>Due date:</b> {{ item.due_date }}
                  </div>
                   <div class = "col-2">
                       <a class ="btn btn-primary" href="doing_item/{{ item.id }}" role="button">
@@ -42,10 +42,10 @@
           <li class="list-group-item">
           <div class="container">
               <div class = "row">
-                  <div class="col-7">
+                  <div class="col-7 overflow-auto">
                       <b>Title:</b> {{ item.name }} <br/>
-                      <b>Description</b> {{ item.description }} <br/>
-                      <b>Due date: </b> {{ item.due_date }}
+                      <b>Description:</b> {{ item.description }} <br/>
+                      <b>Due date:</b> {{ item.due_date }}
                  </div>
                   <div class = "col-2">
                       <a class ="btn btn-warning" href="to_do_item/{{ item.id }}" role="button">
@@ -73,10 +73,10 @@
               <li class="list-group-item">
           <div class="container">
               <div class = "row">
-                  <div class="col-9">
+                  <div class="col-9 overflow-auto">
                       <b>Title:</b> {{ item.name }} <br/>
-                      <b>Description</b> {{ item.description }} <br/>
-                      <b>Due date: </b> {{ item.due_date }}
+                      <b>Description:</b> {{ item.description }} <br/>
+                      <b>Due date:</b> {{ item.due_date }}
                  </div>
                   <div class = "col-2">
                       <a class ="btn btn-primary" href="doing_item/{{ item.id }}" role="button">
